hphp/hack/test/typecheck/dynamic/dynamic1.php.constraint_method_call.exp
File "dynamic1.php", line 13, characters 3-13:
  dynamic
File "dynamic1.php", line 15, characters 3-13:
  dynamic
File "dynamic1.php", line 17, characters 3-13:
  dynamic
File "dynamic1.php", line 19, characters 3-13:
  dynamic
File "dynamic1.php", line 21, characters 3-13:
  dynamic
File "dynamic1.php", line 23, characters 3-13:
  dynamic
File "dynamic1.php", line 25, characters 3-14:
  class<dynamic>
File "dynamic1.php", line 27, characters 3-13:
  dynamic
File "dynamic1.php", line 29, characters 3-13:
  dynamic
File "dynamic1.php", line 31, characters 3-13:
  dynamic
File "dynamic1.php", line 33, characters 3-13:
  dynamic
File "dynamic1.php", line 35, characters 3-13:
  dynamic
File "dynamic1.php", line 37, characters 3-13:
  ~int
File "dynamic1.php", line 39, characters 3-13:
  ~float
File "dynamic1.php", line 41, characters 3-13:
  dynamic
File "dynamic1.php", line 43, characters 3-13:
  dynamic
File "dynamic1.php", line 45, characters 3-13:
  dynamic
File "dynamic1.php", line 47, characters 3-13:
  dynamic
File "dynamic1.php", line 49, characters 3-13:
  (dynamic & string)
File "dynamic1.php", line 51, characters 3-13:
  dynamic
File "dynamic1.php", line 54, characters 3-13:
  dynamic
File "dynamic1.php", line 56, characters 3-13:
  dynamic
File "dynamic1.php", line 58, characters 3-13:
  dynamic
File "dynamic1.php", line 60, characters 3-13:
  dynamic
File "dynamic1.php", line 61, characters 3-13:
  dynamic
File "dynamic1.php", line 63, characters 3-13:
  dynamic
File "dynamic1.php", line 65, characters 3-13:
  dynamic
File "dynamic1.php", line 66, characters 3-13:
  dynamic
File "dynamic1.php", line 67, characters 3-13:
  dynamic
File "dynamic1.php", line 71, characters 3-13:
  dynamic
WARN: File "dynamic1.php", line 12, characters 12-24:
Property accessed on a value of type `dynamic` (Warn[12042])
  File "dynamic1.php", line 11, characters 21-27:
  This expression has type `dynamic`
WARN: File "dynamic1.php", line 14, characters 7-20:
Property accessed on a value of type `dynamic` (Warn[12042])
  File "dynamic1.php", line 12, characters 12-24:
  This expression has type `dynamic`, the result of accessing a property of a `dynamic` type
WARN: File "dynamic1.php", line 16, characters 12-19:
Method invoked on a value of type `dynamic` (Warn[12038])
  File "dynamic1.php", line 11, characters 21-27:
  This expression has type `dynamic`
WARN: File "dynamic1.php", line 18, characters 12-19:
Method invoked on a value of type `dynamic` (Warn[12038])
  File "dynamic1.php", line 11, characters 21-27:
  This expression has type `dynamic`
WARN: File "dynamic1.php", line 32, characters 8-23:
Value of type `dynamic` called as a function (Warn[12039])
  File "dynamic1.php", line 11, characters 39-45:
  This expression has type `dynamic`
WARN: File "dynamic1.php", line 34, characters 8-22:
Value of type `dynamic` called as a function (Warn[12039])
  File "dynamic1.php", line 11, characters 21-27:
  This expression has type `dynamic`
WARN: File "dynamic1.php", line 52, characters 3-4:
Appending to a value of type `dynamic` (Warn[12040])
  File "dynamic1.php", line 3, characters 36-42:
  This expression has type `dynamic`
WARN: File "dynamic1.php", line 53, characters 3-4:
Indexing into a value of type `dynamic` (Warn[12040])
  File "dynamic1.php", line 3, characters 36-42:
  This expression has type `dynamic`
WARN: File "dynamic1.php", line 55, characters 8-9:
Indexing into a value of type `dynamic` (Warn[12040])
  File "dynamic1.php", line 3, characters 36-42:
  This expression has type `dynamic`
WARN: File "dynamic1.php", line 55, characters 8-12:
Indexing into a value of type `dynamic` (Warn[12040])
  File "dynamic1.php", line 55, characters 8-12:
  This expression has type `dynamic`
WARN: File "dynamic1.php", line 55, characters 8-16:
Indexing into a value of type `dynamic` (Warn[12040])
  File "dynamic1.php", line 55, characters 8-16:
  This expression has type `dynamic`
WARN: File "dynamic1.php", line 55, characters 8-21:
Indexing into a value of type `dynamic` (Warn[12040])
  File "dynamic1.php", line 55, characters 8-21:
  This expression has type `dynamic`
ERROR: File "dynamic1.php", line 11, characters 64-65:
Was expecting a type hint (Typing[4032])
